--- a/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="register_genderLabel_text">Gender:</string>
     <string name="register_genderFemale_text">Female</string>
     <string name="register_genderMale_text">Male</string>
+    <!-- Type selection -->
+    <string name="type_selection_title">Settings</string>
+    <string name="type_selection_title_label">Choose your role</string>
 </resources>
