--- a/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">ThePersonalTrainerClub</string>
     <string name="app_bar_name">GymUs</string>
+    <string name="trainer">Entrenador</string>
+    <string name="athlete">Deportista</string>
     <!-- Login -->
     <string name="login_email_placeholder">usuario@dominio.com</string>
     <string name="login_password_placeholder">Contraseña</string>
