--- a/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">ThePersonalTrainerClub</string>
     <string name="app_bar_name">GymUs</string>
+    <string name="trainer">Trainer</string>
+    <string name="athlete">Athlete</string>
     <!-- Login -->
     <string name="login_email_placeholder">user@domain.com</string>
     <string name="login_password_placeholder">Password</string>
@@ -41,8 +43,6 @@
     <string name="fragment_class_lastname_instructor">LastName</string>
     <string name="fragment_button_vote">Vote</string>
     <string name="fragment_button_cancel">Cancel</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- Menu -->
     <string name="menu_activities_title">Activities</string>
     <string name="menu_locations_title">Locations</string>
