--- a/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
@@ -41,6 +41,18 @@
     <string name="fragment_class_lastname_instructor">LastName</string>
     <string name="fragment_button_vote">Vote</string>
     <string name="fragment_button_cancel">Cancel</string>
+    <!-- Activity Add Class -->
+    <string name="add_class_section_1">What class do you want create</string>
+    <string name="add_class_section_2">Where</string>
+    <string name="add_class_section_3">Schedule</string>
+    <string name="add_class_section_4">Duration</string>
+    <string name="add_class_section_5">Frequency</string>
+    <string name="add_class_section_6">Period</string>
+    <string name="add_class_section_7">Maximun number of pupils</string>
+    <string name="add_class_section_8">Price for class</string>
+    <string name="add_class_section_9">Cancelation policy</string>
+    <string name="add_class_section_10">Description</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- Menu -->
