--- a/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
@@ -77,6 +77,16 @@
     <string name="add_location_on_search_error_message">You need to provide a location</string>
     <string name="add_location_on_save_error_message">You need to provide a description and a location</string>
     <string name="add_location_server_error">Some error has occurred</string>
+    <!-- Add class -->
+    <string name="add_class_frequency_01">Unique</string>
+    <string name="add_class_frequency_02">Daily</string>
+    <string name="add_class_frequency_03">Weekly</string>
+    <string name="add_class_frequency_04">Monthly</string>
+    <string name="add_class_start_date">Start: 12 Sep 2018</string>
+    <string name="add_class_end_date">End: 12 Sep 2018</string>
+    <string name="add_class_cancellation_policy">Choose the cancellation policy</string>
+    <string name="add_class_description">Description</string>
+
     <!-- Trainer dashboard -->
     <string name="trainer_management_title">Management</string>
     <string name="trainer_management_open_classes_label">Open classes</string>
