Implement class detail

--- a/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
@@ -87,7 +87,12 @@
     <string name="user_settings_title">Ajustes</string>
     <string name="user_settings_change_photo">Cambia tu foto</string>
     <string name="user_setting_server_error">Ha ocurrido algún error</string>
+    <string name="user_settings_type_trainer">Entrenador</string>
+    <string name="user_settings_type_athlete">Deportista</string>
     <string name="user_settings_choose_source_image">Elige el origen de la imagen</string>
     <string name="user_settings_source_camera">Camara</string>
     <string name="user_settings_source_gallery">Galeria</string>
+    <!-- Class -->
+    <string name="class_detail_title">Clase</string>
+    <string name="class_detail_book_button_title">Reserva</string>
 </resources>
