--- a/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
@@ -118,11 +118,12 @@
     <string name="class_detail_book_button_title">Reserva</string>
 
     <!-- Search class -->
+    <string name="search_class_title">Buscar clase</string>
     <string name="search_class_section01">Que quieres practicar</string>
     <string name="search_class_section02">Cerca de que ubicación</string>
     <string name="search_class_section03">En un radio de</string>
     <string name="search_class_section04">Que horario te va bien</string>
     <string name="search_class_section05">Para cuando</string>
     <string name="search_class_section06">Precio / Clase</string>
-    <string name="search_class_button_search">Search for Activities</string>
+    <string name="search_class_button_search">Buscar Actividades</string>
 </resources>
