--- a/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="fragment_class_lastname_instructor">LastName</string>
     <string name="fragment_button_vote">Vote</string>
     <string name="fragment_button_cancel">Cancel</string>
+    <string name="fragment_button_book">Book</string>
     <!-- Activity Add Class -->
     <string name="add_class_section_1">What class do you want create</string>
     <string name="add_class_section_2">Where</string>
@@ -131,4 +132,6 @@
     <string name="search_class_button_search">Search for Activities</string>
     <string name="search_class_search_error">There is an error searching classes</string>
     <string name="search_class_no_classes_found">Sorry, still there are not classes available with the criteria specified</string>
+    <!-- Search Class Result -->
+    <string name="search_classes_result_title">Classes found</string>
 </resources>
