--- a/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
+++ b/ThePersonalTrainerClub/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ThePersonalTrainerClub</string>
+    <string name="app_name">GymUs</string>
     <string name="app_bar_name">GymUs</string>
     <string name="trainer">Entrenador</string>
     <string name="athlete">Deportista</string>
